# Super-Resolution

./: .gitignore  README.md  data.dvc  dvc.yaml  index.html  main.py  pyproject.toml  report.ipynb  requirements.txt  script.js  styles.css
.dvc/: .gitignore  config
.github/workflows/: training.yml
data/: .gitignore  custom.dvc  kaggle.dvc
logs/fit/20240126-221709/train/: events.out.tfevents.1706303830.the-silver-bullet.23907.0.v2
logs/fit/20240126-222047/train/: events.out.tfevents.1706304048.the-silver-bullet.25425.0.v2
logs/fit/20240126-222047/validation/: events.out.tfevents.1706304334.the-silver-bullet.25425.1.v2
logs/fit/20240127-002704/train/: events.out.tfevents.1706311625.the-silver-bullet.54803.0.v2
logs/fit/20240127-010554/train/: events.out.tfevents.1706313955.the-silver-bullet.12582.0.v2
logs/fit/20240127-022546/train/: events.out.tfevents.1706318747.the-silver-bullet.33929.0.v2
logs/fit/20240127-022619/train/: events.out.tfevents.1706318780.the-silver-bullet.34255.0.v2
logs/fit/20240127-022843/train/: events.out.tfevents.1706318924.the-silver-bullet.35107.0.v2
model/: .gitignore  Autoencoder.keras.dvc  SRCNN.keras.dvc  UNet.keras.dvc
scripts/: export.py  train.py
src/: models.py  utils.py
src/blocks/: layers.py
src/scripts/: heic_to_jpeg
