[tool.poetry]
name = "super-resolution"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{ include = "src", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "2.15.0"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
